@@ -21,16 +21,18 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import it.units.erallab.hmsrobots.core.Actionable;
 import it.units.erallab.hmsrobots.core.controllers.Controller;
 import it.units.erallab.hmsrobots.core.geometry.BoundingBox;
+import it.units.erallab.hmsrobots.core.geometry.Point2;
+import it.units.erallab.hmsrobots.core.geometry.Shape;
 import it.units.erallab.hmsrobots.core.snapshots.RobotShape;
 import it.units.erallab.hmsrobots.core.snapshots.Snapshot;
 import it.units.erallab.hmsrobots.core.snapshots.Snapshottable;
 import it.units.erallab.hmsrobots.core.snapshots.VoxelPoly;
 import it.units.erallab.hmsrobots.util.Grid;
 import org.dyn4j.dynamics.Body;
-import org.dyn4j.dynamics.World;
 import org.dyn4j.dynamics.joint.Joint;
 import org.dyn4j.dynamics.joint.WeldJoint;
 import org.dyn4j.geometry.Vector2;
+import org.dyn4j.world.World;
 
 import java.io.IOException;
 import java.io.ObjectInputStream;
@@ -39,34 +41,58 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Eric Medvet <eric.medvet@gmail.com>
  */
-public class Robot<V extends ControllableVoxel> implements Actionable, Serializable, WorldObject, Snapshottable {
+public class Robot implements Actionable, Serializable, WorldObject, Snapshottable, Shape {
 
   @JsonProperty
-  private final Controller<V> controller;
+  private final Controller controller;
   @JsonProperty
-  private final Grid<? extends V> voxels;
+  private final Grid<Voxel> voxels;
 
-  private transient List<Joint> joints;
+  private transient List<Joint<Body>> joints;
 
   @JsonCreator
   public Robot(
-      @JsonProperty("controller") Controller<V> controller,
-      @JsonProperty("voxels") Grid<? extends V> voxels
+      @JsonProperty("controller") Controller controller, @JsonProperty("voxels") Grid<Voxel> voxels
   ) {
     this.controller = controller;
     this.voxels = voxels;
     reset();
   }
 
-  @Serial
-  private void readObject(ObjectInputStream ois) throws ClassNotFoundException, IOException {
-    ois.defaultReadObject();
-    reset();
+  private static Joint<Body> join(Body body1, Body body2) {
+    return new WeldJoint<>(body1, body2, new Vector2(
+        (body1.getWorldCenter().x + body1.getWorldCenter().x) / 2d,
+        (body1.getWorldCenter().y + body1.getWorldCenter().y) / 2d
+    ));
+  }
+
+  @Override
+  public void act(final double t) {
+    voxels.values().stream().filter(Objects::nonNull).forEach(v -> v.act(t));
+    controller.control(t, voxels);
+  }
+
+  @Override
+  public void reset() {
+    voxels.values().stream().filter(Objects::nonNull).forEach(Voxel::reset);
+    assemble();
+    controller.reset();
+  }
+
+  @Override
+  public void addTo(World<Body> world) {
+    for (Voxel voxel : voxels.values()) {
+      if (voxel != null) {
+        voxel.addTo(world);
+      }
+    }
+    for (Joint<Body> joint : joints) {
+      world.addJoint(joint);
+    }
   }
 
   private void assemble() {
@@ -77,10 +103,7 @@ public class Robot<V extends ControllableVoxel> implements Actionable, Serializa
         Voxel voxel = voxels.get(gx, gy);
         if (voxel != null) {
           voxel.setOwner(this);
-          voxel.translate(new Vector2(
-              (double) gx * voxel.getSideLength(),
-              (double) gy * voxel.getSideLength()
-          ));
+          voxel.translate(new Vector2((double) gx * voxel.getSideLength(), (double) gy * voxel.getSideLength()));
           //check for adjacent voxels
           if ((gx > 0) && (voxels.get(gx - 1, gy) != null)) {
             Voxel adjacent = voxels.get(gx - 1, gy);
@@ -97,68 +120,53 @@ public class Robot<V extends ControllableVoxel> implements Actionable, Serializa
     }
   }
 
-  private static Joint join(Body body1, Body body2) {
-    return new WeldJoint(body1, body2, new Vector2(
-        (body1.getWorldCenter().x + body1.getWorldCenter().x) / 2d,
-        (body1.getWorldCenter().y + body1.getWorldCenter().y) / 2d
-    ));
+  @SuppressWarnings("OptionalGetWithoutIsPresent")
+  @Override
+  public BoundingBox boundingBox() {
+    return voxels.values().stream().filter(Objects::nonNull).map(Voxel::boundingBox).reduce(BoundingBox::largest).get();
+  }
+
+  @Override
+  public Point2 center() {
+    return Point2.average(voxels.values().stream().filter(Objects::nonNull).map(Voxel::center).toArray(Point2[]::new));
+  }
+
+  @Override
+  public double area() {
+    return voxels.values().stream().filter(Objects::nonNull).mapToDouble(Voxel::area).sum();
+  }
+
+  public Controller getController() {
+    return controller;
   }
 
   @Override
   public Snapshot getSnapshot() {
     Grid<Snapshot> voxelSnapshots = Grid.create(voxels, v -> v == null ? null : v.getSnapshot());
-    Snapshot snapshot = new Snapshot(
-        new RobotShape(
-            Grid.create(voxelSnapshots, s -> s == null ? null : ((VoxelPoly) s.getContent())),
-            boundingBox()
-        ),
-        getClass()
-    );
+    Snapshot snapshot = new Snapshot(new RobotShape(Grid.create(
+        voxelSnapshots,
+        s -> s == null ? null : ((VoxelPoly) s.getContent())
+    ), boundingBox()), getClass());
     if (controller instanceof Snapshottable) {
       snapshot.getChildren().add(((Snapshottable) controller).getSnapshot());
     }
-    snapshot.getChildren().addAll(voxelSnapshots.values().stream().filter(Objects::nonNull).collect(Collectors.toList()));
+    snapshot.getChildren().addAll(voxelSnapshots.values().stream().filter(Objects::nonNull).toList());
     return snapshot;
   }
 
-  @Override
-  public void addTo(World world) {
-    for (Voxel voxel : voxels.values()) {
-      if (voxel != null) {
-        voxel.addTo(world);
-      }
-    }
-    for (Joint joint : joints) {
-      world.addJoint(joint);
-    }
+  public Grid<Voxel> getVoxels() {
+    return voxels;
+  }
+
+  @Serial
+  private void readObject(ObjectInputStream ois) throws ClassNotFoundException, IOException {
+    ois.defaultReadObject();
+    reset();
   }
 
   @Override
-  public void act(final double t) {
-    voxels.values().stream().filter(Objects::nonNull).forEach(v -> v.act(t));
-    controller.control(t, voxels);
-  }
-
-  @Override
-  public void reset() {
-    voxels.values().stream().filter(Objects::nonNull).forEach(ControllableVoxel::reset);
-    assemble();
-    controller.reset();
-  }
-
-  public Vector2 getCenter() {
-    double xc = 0d;
-    double yc = 0d;
-    double n = 0;
-    for (Voxel voxel : voxels.values()) {
-      if (voxel != null) {
-        final Vector2 center = voxel.getCenter();
-        xc = xc + center.x;
-        yc = yc + center.y;
-        n = n + 1;
-      }
-    }
-    return new Vector2(xc / n, yc / n);
+  public String toString() {
+    return "Robot{" + "controller=" + controller + ", voxels=" + voxels + '}';
   }
 
   public void translate(Vector2 v) {
@@ -167,29 +175,5 @@ public class Robot<V extends ControllableVoxel> implements Actionable, Serializa
         voxel.translate(v);
       }
     }
-  }
-
-  public BoundingBox boundingBox() {
-    return voxels.values().stream()
-        .filter(Objects::nonNull)
-        .map(Voxel::boundingBox)
-        .reduce(BoundingBox::largest)
-        .get();
-  }
-
-  public Controller<V> getController() {
-    return controller;
-  }
-
-  public Grid<? extends V> getVoxels() {
-    return voxels;
-  }
-
-  @Override
-  public String toString() {
-    return "Robot{" +
-        "controller=" + controller +
-        ", voxels=" + voxels +
-        '}';
   }
 }
